--- a/model.ipynb
+++ b/model.ipynb
@@ -544,19 +544,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 7358556.5000,  7318345.5000, 13770130.0000,  7292182.5000,\n",
-       "          7260045.5000,  7282464.0000,  7202377.0000,  7739345.0000,\n",
-       "          7547479.5000,  7380546.5000,  7314925.0000,  7069206.0000]],\n",
-       "       grad_fn=<AddmmBackward0>)"
+       "243940350.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +583,16 @@
     "outputs = [2.2877776e+08, 2.3641480e+08, 2.4394035e+08, 2.5053752e+08,\n",
     "       2.5778395e+08, 2.6495542e+08, 2.7255312e+08, 2.7867651e+08,\n",
     "       2.8711296e+08, 2.9291920e+08, 2.9978365e+08, 3.0807402e+08]\n",
+    "\n",
+    "# CHANGE THE MONTH HERE TO SEE PREDICTION FOR 2022 :)\n",
     "predict_receipts_by_month(outputs, 'february')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we only have one year of data, we cannot predict anything more than month as we don't have any information about trends across years. So, this is the best we can do. The benefit of this is no recalculations but it definitely can be improved with more data."
    ]
   }
  ],
